<resources>
    <string name="app_name">Pizzaria da Dona Cida</string>
    <string name="rbCalabresa">Calabresa</string>
    <string name="rbPortuguesa">Portuguesa</string>
    <string name="rbMussarela">Mussarela</string>
    <string name="btnCalcular">Calcular</string>
    <string name="borda_recheada">Borda Recheada</string>
    <string name="formas_de_pagamento">Formas de Pagamento:</string>
    <string-array name="formaPagto">
        <item>Bitcoin</item>
        <item>Credito</item>
        <item>Debito</item>
    </string-array>
</resources>
